scripts/openunison/localhost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "50"
    cert-manager.io/cluster-issuer: enterprise-ca
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: openunison-orchestra
    nginx.org/ssl-services: openunison-orchestra
  labels:
    app.kubernetes.io/component: ingress-nginx
    app.kubernetes.io/instance: openunison-orchestra
    app.kubernetes.io/name: openunison
    app.kubernetes.io/part-of: openunison
  name: openunison-orchestra-localhost
  namespace: openunison
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: openunison-orchestra
            port:
              number: 443
        path: /
        pathType: Prefix
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: openunison-orchestra
            port:
              number: 443
        path: /
        pathType: Prefix
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: openunison-orchestra
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - localhost
    secretName: ou-tls-certificate
status:
  loadBalancer:
    ingress:
    - hostname: localhost
